<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.cbrinkrolf</groupId>
	<artifactId>hq-power-outage-api-client</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<exec.mainClass>main.Main</exec.mainClass>
	</properties>

	<build>
		<finalName>hq-power-outage-api-client-v.${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>main.Main</mainClass>
									<manifestEntries>
										<hq-power-outage-api-client-version>${project.version}</hq-power-outage-api-client-version>
										<hq-power-outage-api-client-build-date>${maven.build.timestamp}</hq-power-outage-api-client-build-date>
									</manifestEntries>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
									<resource>META-INF/attribution.xml</resource>
									<file>${project.build.directory}/attribution.xml</file>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*</exclude>
										<exclude>README*</exclude>
										<exclude>NOTICE*</exclude>
										<exclude>AUTHORS*</exclude>
										<exclude>LICENSE*</exclude>
										<exclude>about.*</exclude>
										<exclude>.keep</exclude>
										<exclude>*.txt</exclude>
										<exclude>*.xsd</exclude>
										<exclude>*.dtd</exclude>
										<exclude>ASL2.0</exclude>
										<exclude>*.stf</exclude>
										<exclude>*.html</exclude>
										<exclude>**/*.afdesign</exclude>
										<exclude>XML*VERSION</exclude>
										<exclude>release-timestamp.txt</exclude>
										<exclude>logback.xml</exclude>
										<exclude>**/Log4j2Plugins.dat</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter</artifactId>
    		<version>6.0.3</version>
   			<scope>test</scope>
		</dependency>
		
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>5.23.0</version>
    		<scope>test</scope>
		</dependency>
	</dependencies>
	
	
</project>